/////////////////////////////////////////////////////////////
// Generated by the VisualData modelbuilder.  DO NOT EDIT!
/////////////////////////////////////////////////////////////
syntax = "proto3";
package OpenNGS.Item.Service;

import "openngs.item.common.proto";

//获取玩家道具列表req
//Data\Entities\OpenNGS\Item.xlsx
message GetItemsReq{
	uint64 uin = 1;  //玩家ID
	OpenNGS.Item.Common.ITEM_CATEGORY Category = 2;  //一级分类（填0不生效）
	OpenNGS.Item.Common.ITEM_TYPE Type = 3;  //二级分类（填0不生效）
	OpenNGS.Item.Common.ITEM_KIND Kind = 4;  //三级分类（填0不生效）
}

//获取玩家道具列表rsp
//Data\Entities\OpenNGS\Item.xlsx
message GetItemsRsp{
	int32 result = 1;  //response result
}

//使用道具req
//Data\Entities\OpenNGS\Item.xlsx
message UseItemReq{
	uint64 uin = 1;  //玩家ID
	OpenNGS.Item.Common.ItemData itemData = 2;  //所使用道具信息
}

//使用道具rsp
//Data\Entities\OpenNGS\Item.xlsx
message UseItemRsp{
	int32 result = 1;  //response result
	repeated OpenNGS.Item.Common.ItemList itemList = 2;  //玩家今日抽取该盲盒次数
}

//放置道具req
//Data\Entities\OpenNGS\Item.xlsx
message PlaceItemReq{
	uint64 uin = 1;  //玩家ID
	OpenNGS.Item.Common.ItemData itemData = 2;  //所使用道具信息
	OpenNGS.Item.Common.ITEM_PLACE_EXPIRATION itemPlaceExpType = 3;  //道具放置类型
}

//放置道具rsp
//Data\Entities\OpenNGS\Item.xlsx
message PlaceItemRsp{
	int32 result = 1;  //response result
}

//重置所有道具req
//Data\Entities\OpenNGS\Item.xlsx
message ReplaceItemsReq{
	uint64 uin = 1;  //玩家ID
}

//重置所有道具rsp
//Data\Entities\OpenNGS\Item.xlsx
message ReplaceItemsRsp{
	int32 result = 1;  //response result
}

//添加道具req
//Data\Entities\OpenNGS\Item.xlsx
message AddItemReq{
	uint64 uin = 1;  //玩家ID
	uint32 itemId = 2;  //道具ID
	uint32 count = 3;  //道具数量
}

//添加道具rsp
//Data\Entities\OpenNGS\Item.xlsx
message AddItemRsp{
	int32 result = 1;  //response result
}

//道具id&数量
//Data\Entities\OpenNGS\Item.xlsx
message IdCountPair{
	uint32 itemId = 1;  //道具ID
	uint32 count = 2;  //道具数量
}

//批量添加道具req
//Data\Entities\OpenNGS\Item.xlsx
message AddItemsReq{
	uint64 uin = 1;  //玩家ID
	repeated OpenNGS.Item.Service.IdCountPair items = 2;  //道具ID&数量
	bool CloseNotifyStatus = 3;  //不开启通知系统
}

//批量添加道具rsp
//Data\Entities\OpenNGS\Item.xlsx
message AddItemsRsp{
	int32 result = 1;  //response result
}

//扣除道具req
//Data\Entities\OpenNGS\Item.xlsx
message DeleteItemReq{
	uint64 uin = 1;  //response result
	uint32 itemId = 2;  //玩家ID
	uint32 count = 3;  //删除数量
	uint64 itemUid = 4;  //道具uid
}

//扣除道具rsp
//Data\Entities\OpenNGS\Item.xlsx
message DeleteItemRsp{
	int32 result = 1;  //response result
}

//获取玩家指定道具信息req
//Data\Entities\OpenNGS\Item.xlsx
message GetItemDataReq{
	uint64 uin = 1;  //response result
	uint32 itemId = 2;  //玩家ID
	uint64 itemUid = 3;  //道具uid
}

//获取玩家指定道具信息rsp
//Data\Entities\OpenNGS\Item.xlsx
message GetItemDataRsp{
	int32 result = 1;  //response result
}

//获取道具包产出结果req
//Data\Entities\OpenNGS\Item.xlsx
message UnpackReq{
	repeated OpenNGS.Item.Service.IdCountPair packs = 1;  //待开道具包
}

//获取道具包产出结果rsp
//Data\Entities\OpenNGS\Item.xlsx
message UnpackRsp{
	int32 result = 1;  //response result
	repeated OpenNGS.Item.Service.IdCountPair items = 2;  //道具包产出
}

//Ni道具服务
service NiItemService{
	// 获取玩家道具列表
	rpc GetItemList (GetItemsReq) returns (GetItemsRsp) {}
	// 添加道具
	rpc AddItem (AddItemReq) returns (AddItemRsp) {}
	// 批量添加道具
	rpc AddItems (AddItemsReq) returns (AddItemsRsp) {}
	// 扣除道具
	rpc DeleteItem (DeleteItemReq) returns (DeleteItemRsp) {}
	// 获取玩家特定类型道具信息
	rpc GetItemData (GetItemDataReq) returns (GetItemDataRsp) {}
	// 使用道具
	rpc UseItem (UseItemReq) returns (UseItemRsp) {}
	// 放置道具
	rpc PlaceItem (PlaceItemReq) returns (PlaceItemRsp) {}
	// 重置所有道具
	rpc ReplaceItems (ReplaceItemsReq) returns (ReplaceItemsRsp) {}
	// 获取道具包产出结果
	rpc Unpack (UnpackReq) returns (UnpackRsp) {}
}
